--- a/admin.css
+++ b/admin.css
@@ -22373,7 +22373,7 @@ input[type='text'] {
     font-size: 42px;
     text-align: center;
     margin-top: -4px;
-    height: 36px;
+    /* height: 36px; */
     -webkit-text-stroke: 0.5px yellow;
     text-shadow: 1px 4px 2px #2f2f2f;
 }
