--- a/admin.css
+++ b/admin.css
@@ -22568,24 +22568,24 @@ input[type='text'] {
   text-align: center;
   width: 100%;
 }
-.fontx {
+/* .fontx {
   font-size: 23px;
   font-weight: 800;
   width: 100%;
   height: 20px;
-}
-.fontx1 {
+} */
+/* .fontx1 {
   font-size: 16px;
   text-align: center;
   width: 100%;
   height: 20px;
-}
-.fontx2 {
+} */
+/* .fontx2 {
   font-size: 23px;
   font-weight: 800;
   width: 100%;
   padding-top: 14px;
-}
+} */
 input:focus {
   outline: none;
   border: none;
